# medea

./: .gitignore  .hspec  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SPEC.md  STANDARDS.md  TODO.md  TUTORIAL.md  cabal.project  medea.cabal  stack.yaml
.github/workflows/: haskell.yml
conformance/loader/invalid/: no-start-sigil.medea
conformance/loader/valid/: only-start.medea  several.medea
conformance/parser/: extra-words-type-header.medea  no-schema-sigil.medea  reserved-identifier-schema-name.medea  reserved-identifier-type-name.medea  wrong-indentation-schema-header.medea  wrong-indentation-type-specifier.medea
conformance/parser/fail/: additional-property-schema-without-allowed.medea  array-elems-w-tuple.medea  array-tuple-w-elems.medea  array-tuple-w-length.medea  array-tuple-w-length2.medea  empty-length.medea  no-properties-sigil.medea  no-type-sigil.medea  not-utf8.medea  stringVals.medea  three-word-schema-header.medea  wrong-indentation-type-header.medea
conformance/parser/invalid/: not-utf8.medea
conformance/parser/pass/: additional-properties-allowed-1.medea  additional-properties-allowed-2.medea  additional-properties-allowed-3.medea  additional-properties-allowed-4.medea  additional-properties-allowed-5.medea  additional-properties-allowed-6.medea  additional-properties-allowed.medea  all-specifiers-1.medea  all-specifiers-2.medea  all-specifiers-3.medea  array-elems.medea  array-tuple1.medea  array-tuple2.medea  maximum-and-minimum-length.medea  maximum-length.medea  minimum-and-maximum-length.medea  minimum-length.medea  multiple-properties-1.medea  multiple-properties-2.medea  multiple-properties.medea  multiple-schemata-with-types.medea  multiple-schemata.medea  single-schema.medea  single-schemata-with-types.medea  stringVals.medea
conformance/parser/valid/: only-start.medea
conformance/schema-builder/: duplicate-schemata.medea  no-start-schema.medea  self-typing.medea  type-length.medea
conformance/schema-builder/fail/: duplicate-prop.medea  duplicate-schemata.medea  indirect-self-typing.medea  isolated-schemata.medea  list-spec-without-array-1.medea  list-spec-without-array-2.medea  list-spec-without-array-3.medea  list-spec-without-array-4.medea  missing-additional-prop-schema.medea  missing-list-schema.medea  missing-prop-schema.medea  missing-schema.medea  missing-tuple-schema.medea  property-spec-without-object-1.medea  property-spec-without-object-2.medea  property-spec-without-object-3.medea  property-spec-without-object-4.medea  reserved-redefined.medea  stringVals-without-string.medea  tuple-spec-without-array.medea  type-length.medea  unused-schemata.medea
conformance/schema-builder/pass/: referenced-in-additional-property-only.medea  referenced-in-list-only.medea  referenced-in-property-only.medea  referenced-in-tuple-only.medea
conformance/validation/: 1-property-additional-1.medea  1-property-additional-2.medea  1-property-additional-3.medea  1-property-no-additional-1.medea  1-property-no-additional-2.medea  1-property-no-additional-3.medea  2-tuple.medea  3-property-additional-allowed-1.medea  3-property-additional-allowed-2.medea  3-property-no-additional-1.medea  3-property-no-additional-2.medea  3-tuple.medea  any.medea  array.medea  boolean.medea  list-1.medea  list-2.medea  list-3.medea  list-4.medea  list-5.medea  list-6.medea  list-7.medea  map-number-bool.medea  map-with-1-specified.medea  map-with-2-specified.medea  null.medea  nullable-array.medea  nullable-boolean.medea  nullable-number.medea  nullable-object.medea  nullable-string.medea  object.medea  string.medea  stringVals.medea  stringVals2.medea
spec/: SEMANTICS.md  SYNTAX.md
src/Data/: Medea.hs
src/Data/Medea/: Analysis.hs  Error.hs  Identifier.hs  JSONTree.hs  JSONType.hs  Loader.hs  Parsing.hs  Primitive.hs  Schema.hs  SchemaError.hs  SchemaGraph.hs  Type.hs  ValidJSON.hs  Validation.hs  Validator.hs
src/Data/Medea/Parser/: Error.hs  Identifier.hs  Primitive.hs  Types.hs
src/Data/Medea/Parser/Spec/: Array.hs  Object.hs  Property.hs  Schema.hs  Schemata.hs  String.hs  Type.hs
src/Data/Medea/Types/: Lines.hs
src/Data/Text/: Utf8.hs
test/: TestM.hs
test/Data/Aeson/: Arbitrary.hs
test/TestM/: Util.hs
test/loader/: Main.hs
test/parser/: Main.hs
test/schema-builder/: Main.hs
test/validator-quickcheck/: Main.hs
