cabal-version:          2.2
name:                   medea
version:                1.0.0
synopsis:               A schema language for JSON.
description:            This repo hosts a specification for a schema language, 
                        an extensive conformance suite, and a reference 
                        implementation of both a schema loader and validator.
homepage:               https://bitbucket.org/juspay/medea/src
bug-reports:            mailto:koz.ross@juspay.in
license:                NONE
author:                 Koz Ross,
                        Shaurya Gupta
maintainer:             koz.ross@juspay.in
copyright:              Juspay Technologies Pvt Ltd (C) 2020
category:               Data
build-type:             Simple
tested-with:            GHC == 8.6.5
extra-source-files:     CHANGELOG.md,
                        README.md,
                        SPEC.md,
                        conformance/parser/*.medea,
                        conformance/schema-builder/*.medea,
                        conformance/validation/*.medea

source-repository       head
  type:                 git
  location:             https://bitbucket.org/juspay/medea.git

library
  exposed-modules:      Data.Medea
  other-modules:        Data.Medea.Loader,
                        Data.Medea.JSONType,
                        Data.Medea.ValidJSON,
                        Data.Medea.Analysis,
                        Data.Medea.Parser.Error,
                        Data.Medea.Parser.Identifier,
                        Data.Medea.Parser.Spec.Schema,
                        Data.Medea.Parser.Spec.Schemata,
                        Data.Medea.Parser.Spec.Type,
                        Data.Medea.Schema
  build-depends:        base >= 4.11.1 && < 5,
                        aeson >= 1.4.6.0 && < 1.5.0.0,
                        text >= 1.2.3.1 && < 1.3.0.0,
                        megaparsec >= 8.0.0 && < 9.0.0,
                        bytestring >= 0.10.8.2 && < 0.11.0.0,
                        vector >= 0.12.0.3 && < 0.13.0.0,
                        algebraic-graphs >= 0.5 && < 0.6,
                        mtl >= 2.2.2 && < 2.3.0,
                        containers >= 0.6.0.1 && < 0.7.0.0,
                        free >= 5.1.3 && < 5.2.0,
                        unordered-containers >= 0.2.10.0 && < 0.3.0.0,
                        scientific >= 0.3.6.2 && < 0.4.0.0,
                        deepseq >= 1.4.4.0 && < 1.5.0.0,
                        hashable >= 1.3.0.0 && < 1.4.0.0,
                        vector-instances >= 3.4 && < 3.5,
                        extra >= 1.6.19 && < 1.7,
                        microlens-ghc >= 0.4.12 && < 0.5.0,
                        microlens-mtl >= 0.2.0.1 && < 0.3.0.0
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite conformance-parser
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        TestM
  build-depends:        base,
                        medea,
                        mtl,
                        hspec >= 2.7.1 && < 2.8.0,
                        directory >= 1.3.3.0 && < 1.4.0.0,
                        filepath >= 1.4.2.1 && < 1.5.0.0
  hs-source-dirs:       test/parser, 
                        test
  default-language:     Haskell2010

test-suite conformance-schema-builder
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        TestM
  build-depends:        base,
                        medea,
                        mtl,
                        hspec >= 2.7.1 && < 2.8.0,
                        directory >= 1.3.3.0 && < 1.4.0.0,
                        filepath >= 1.4.2.1 && < 1.5.0.0
  hs-source-dirs:       test/schema-builder, 
                        test
  default-language:     Haskell2010

test-suite quickcheck-validator
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        Data.Aeson.Arbitrary,
                        TestM
  build-depends:        base,
                        medea,
                        aeson,
                        mtl,
                        vector,
                        hspec >= 2.7.1 && < 2.8.0,
                        hspec-core >= 2.7.1 && < 2.8.0,
                        directory >= 1.3.3.0 && < 1.4.0.0,
                        filepath >= 1.4.2.1 && < 1.5.0.0,
                        QuickCheck >= 2.13.2 && < 2.14.0,
                        quickcheck-instances >= 0.3.22 && < 0.4.0,
                        unordered-containers >= 0.2.10.0 && < 0.3.0.0
  hs-source-dirs:       test/validator-quickcheck,
                        test
  default-language:     Haskell2010
